commit to heroku

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a small to-do app",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "me",
   "license": "ISC",
